--- a/Tasneem_Task9&10/style.css
+++ b/Tasneem_Task9&10/style.css
@@ -163,5 +163,13 @@ body {
 }
 
 
-
+footer{
+    height: 30px;
+    background: #333333;
+    color: #fff;
+    text-align: center;
+    position: fixed;
+    bottom: 0;
+    width: 100%;
+}
 
